# cpp-performance-math-problems

./: .gitignore  Dockerfile  README.md  run_project.sh
navier-stokes/: CMakeLists.txt  Makefile  main.cc  series.cc  series.h  worker.cc  worker.h
navier-stokes/include/intel/vx_samples/: basic.hpp  cmdparser.hpp
navier-stokes/include/src/: basic.cpp  cmdparser.cpp
